Update manuscript in the Method section; continue to results.

--- a/references.bib
+++ b/references.bib
@@ -148,3 +148,83 @@
 	url = {https://r4ds.hadley.nz/},
 	address = {Beijing ; Sebastopol, CA}
 }
+
+@article{clics2020,
+  title = {The {{Database}} of {{Cross-Linguistic Colexifications}}, Reproducible Analysis of Cross-Linguistic Polysemies},
+  author = {Rzymski, Christoph and Tresoldi, Tiago and Greenhill, Simon J. and Wu, Mei-Shin and Schweikhard, Nathanael E. and Koptjevskaja-Tamm, Maria and Gast, Volker and Bodt, Timotheus A. and Hantgan, Abbie and Kaiping, Gereon A. and Chang, Sophie and Lai, Yunfan and Morozova, Natalia and Arjava, Heini and Hübler, Nataliia and Koile, Ezequiel and Pepper, Steve and Proos, Mariann and Van Epps, Briana and Blanco, Ingrid and Hundt, Carolin and Monakhov, Sergei and Pianykh, Kristina and Ramesh, Sallona and Gray, Russell D. and Forkel, Robert and List, Johann-Mattis},
+  date = {2020-01-13},
+  journaltitle = {Scientific Data},
+  shortjournal = {Sci Data},
+  volume = {7},
+  number = {1},
+  pages = {13},
+  publisher = {Nature Publishing Group},
+  issn = {2052-4463},
+  doi = {10.1038/s41597-019-0341-x},
+  url = {https://www.nature.com/articles/s41597-019-0341-x},
+  urldate = {2023-04-17},
+  abstract = {Advances in computer-assisted linguistic research have been greatly influential in reshaping linguistic research. With the increasing availability of interconnected datasets created and curated by researchers, more and more interwoven questions can now be investigated. Such advances, however, are bringing high requirements in terms of rigorousness for preparing and curating datasets. Here we present CLICS, a Database of Cross-Linguistic Colexifications (CLICS). CLICS tackles interconnected interdisciplinary research questions about the colexification of words across semantic categories in the world’s languages, and show-cases best practices for preparing data for cross-linguistic research. This is done by addressing shortcomings of an earlier version of the database, CLICS2, and by supplying an updated version with CLICS3, which massively increases the size and scope of the project. We provide tools and guidelines for this purpose and discuss insights resulting from organizing student tasks for database updates.},
+  issue = {1},
+  langid = {english},
+  keywords = {colexification,Databases,lexical database,polysemy,Sociology},
+  file = {/Users/Primahadi/Library/CloudStorage/GoogleDrive-primahadi_wijaya@unud.ac.id/Other computers/My MacBook Pro/Documents/_Zotero Digital Library/Journal Article/Rzymski et al_2020_The Database of Cross-Linguistic Colexifications, reproducible analysis of.pdf}
+}
+
+@inbook{françois2008,
+	title = {Semantic maps and the typology of colexification: Intertwining polysemous networks across languages},
+	author = {{François}, Alexandre},
+	editor = {Vanhove, Martine},
+	year = {2008},
+	date = {2008},
+	publisher = {John Benjamins Publishing Company},
+	pages = {163--215},
+	doi = {10.1075/slcs.106.09fra},
+	address = {Amsterdam},
+	langid = {en}
+}
+
+@article{krauße,
+	title = {EnoLEX: A diachronic lexical database for the Enggano language},
+	author = {{Krauße}, Daniel and Rajeg, Gede Primahadi Wijaya and Pramartha, Cokorda Rai Adi and Zobel, Erik and Nothofer, Bernd and Hemmings, Charlotte and Ogilvie, Sarah and Arka, I Wayan and Dalrymple, Mary},
+	doi = {10.25446/oxford.28282169.v1},
+	year = {2024},
+	langid = {en}
+}
+
+@inproceedings{rajeg2024,
+  title = {{{EnoLEX}}: {{A}} Diachronic Lexical Database for the {{Enggano}} Language},
+  booktitle = {{{AsiaLex}} 2024 {{Proceedings}}: {{Asian Lexicography}} - {{Merging}} Cutting-Edge and Established Approaches},
+  author = {Rajeg, Gede Primahadi Wijaya and Krauße, Daniel and Pramartha, Cokorda},
+  editor = {Inoue, Ai and Kawamoto, Naho and Sumiyoshi, Makoto},
+  date = {2024},
+  pages = {123--132},
+  location = {Toyo University, Tokyo, Japan},
+  doi = {10.25446/oxford.27013864},
+  url = {https://portal.sds.ox.ac.uk/articles/conference_contribution/EnoLEX_A_diachronic_lexical_database_for_the_Enggano_language/27013864},
+  eventtitle = {The {{Asian Association}} for {{Lexicography}} 2024}
+}
+
+@article{lai2023,
+	title = {Lexical data for the historical comparison of Rgyalrongic languages},
+	author = {Lai, Yunfan and List, Johann-Mattis},
+	year = {2023},
+	month = {10},
+	date = {2023-10-18},
+	journal = {Open Research Europe},
+	pages = {99},
+	volume = {3},
+	doi = {10.12688/openreseurope.16017.2},
+	url = {https://open-research-europe.ec.europa.eu/articles/3-99/v2},
+	langid = {en}
+}
+
+@software{belval2024,
+  title = {Pdf2image: {{A}} Wrapper around the Pdftoppm and Pdftocairo Command Line Tools to Convert {{PDF}} to a {{PIL Image}} List.},
+  shorttitle = {Pdf2image},
+  author = {Belval, Edouard},
+  date = {2024-01-08},
+  url = {https://badge.fury.io/py/pdf2image},
+  urldate = {2026-02-12},
+  version = {1.17.0},
+  keywords = {convert,image,jpeg,jpg,pdf,png}
+}
