Update manuscript: method and result; add images.

--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,7 @@
 	url = {https://doi.org/10.1093/llc/fqh050}
 }
 
+
 @inproceedings{smith2007,
 	title = {An {{Overview}} of the {{Tesseract OCR Engine}}},
   booktitle = {Ninth {{International Conference}} on {{Document Analysis}} and {{Recognition}} ({{ICDAR}} 2007)},
@@ -65,10 +66,38 @@
 	year = {1980},
 	date = {1980},
 	publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
-	volume = {Materials in Languages of Indonesia},
+	volume = {Materials in {{Languages}} of {{Indonesia}}},
 	doi = {10.15144/PL-D17},
 	url = {http://hdl.handle.net/1885/144430},
 	note = {DOI: 10.15144/PL-D17},
+	address = {Canberra, A.C.T., Australia}
+}
+
+@book{stokhof1982,
+  title = {Holle Lists, Vocabularies in Languages of {{Indonesia}}, {{Vol}}. 5/1: {{Irian Jaya}}: {{Austronesian}} Languages; {{Papuan}} Languages, {{Digul}} Area},
+  shorttitle = {Holle Lists, Vocabularies in Languages of {{Indonesia}}, {{Vol}}. 5/1},
+  editor = {Stokhof, W. A. L. and Saleh-Bronckhorst, Lia and Almanar, Alma E.},
+  date = {1982},
+  year = {1982},
+  volume = {Materials in {{Languages}} of {{Indonesia}}},
+  publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
+  location = {Canberra, A.C.T., Australia},
+  url = {http://hdl.handle.net/1885/144577},
+  note = {DOI: 10.15144/PL-D52},
+  langid = {english}
+}
+
+@book{holle-list-barrier-islands,
+	title = {Holle lists: Vocabularies in languages of Indonesia, Vol. 10/3: Islands off the west coast of Sumatra},
+	editor = {Stokhof, W. A. L. and Almanar, Alma E.},
+	year = {1987},
+	date = {1987},
+	publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
+	series = {Pacific Linguistics (Series D)},
+	volume = {Materials in Languages of Indonesia},
+	number = {76},
+	url = {http://hdl.handle.net/1885/144589},
+	note = {Citation Key: 1885-144589},
 	address = {Canberra, A.C.T., Australia}
 }
 
@@ -91,20 +120,6 @@
 	date = {2023-05-26},
 	doi = {10.25446/oxford.23515788},
 	langid = {en}
-}
-
-@book{holle-list-barrier-islands,
-	title = {Holle lists: Vocabularies in languages of Indonesia, Vol. 10/3: Islands off the west coast of Sumatra},
-	editor = {Stokhof, W. A. L. and Almanar, Alma E.},
-	year = {1987},
-	date = {1987},
-	publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
-	series = {Pacific Linguistics (Series D)},
-	volume = {Materials in Languages of Indonesia},
-	number = {76},
-	url = {http://hdl.handle.net/1885/144589},
-	note = {Citation Key: 1885-144589},
-	address = {Canberra, A.C.T., Australia}
 }
 
 @unpublished{rajeg2025,
