--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,25 @@
 	url = {https://doi.org/10.1093/llc/fqh050}
 }
 
+@article{francoisLexicalTectonicsMapping2022,
+  title = {Lexical Tectonics: {{Mapping}} Structural Change in Patterns of Lexification},
+  shorttitle = {Lexical Tectonics},
+  author = {François, Alexandre},
+  date = {2022-06-01},
+  journaltitle = {Zeitschrift für Sprachwissenschaft},
+  volume = {41},
+  number = {1},
+  pages = {89--123},
+  publisher = {De Gruyter},
+  issn = {1613-3706},
+  doi = {10.1515/zfs-2021-2041},
+  url = {https://www.degruyter.com/document/doi/10.1515/zfs-2021-2041/html},
+  urldate = {2023-04-15},
+  abstract = {Whether it is based on philological data or on reconstruction, historical linguistics formulates etymological hypotheses that entail changes both in form and in meaning. Semantic change can be understood as a change in “patterns of lexification”, i.\,e., correspondences between forms and senses. Thus a polysemous word, which once lexified senses s1–s2–s3, evolves so it later encodes s2–s3–s4. Meanings that used to be colexified are now dislexified, and vice versa. Leaning on empirical data from Romance and from Oceanic, this study outlines a general model of historical lexicology, and identifies five types of structural innovations in the lexicon: split, merger, competition, shift, and relexification. The theoretical discussion is made easier by using a visual approach to structural change, in the form of diachronic maps. Semantic maps have already proven useful to represent synchronic patterns of lexification, outlining each language’s emic categories against a grid of etic senses. The same principle can be profitably used when analysing lexification patterns in diachrony: lexical change is then viewed as the reconfiguration of sense clusters in a semantic space. Maps help us visualize the “lexical tectonics” at play as words evolve over time, gradually shifting their meaning, gaining or losing semantic territory, colliding with each other, or disappearing forever.},
+  langid = {english},
+  keywords = {colexification,historical linguistics,lexical typology,polysemy,relexification,semantic change,semantic map,semantic maps,structural linguistics},
+  file = {/Users/Primahadi/Library/CloudStorage/GoogleDrive-primahadi_wijaya@unud.ac.id/Other computers/My MacBook Pro/Documents/_Zotero Digital Library/Journal Article/François_2022_Lexical tectonics.pdf}
+}
 
 @inproceedings{smith2007,
 	title = {An {{Overview}} of the {{Tesseract OCR Engine}}},
@@ -243,3 +262,79 @@
   version = {1.17.0},
   keywords = {convert,image,jpeg,jpg,pdf,png}
 }
+
+@book{drucker2021,
+	title = {The {{Digital Humanities}} Coursebook: {{An}} Introduction to Digital Methods for Research and Scholarship},
+	author = {Drucker, Johanna},
+	year = {2021},
+	month = {03},
+	date = {2021-03-24},
+	publisher = {Routledge},
+	doi = {10.4324/9781003106531},
+	note = {DOI: 10.4324/9781003106531},
+	address = {London}
+}
+
+@dataset{rajegDigitisedAnnotatedHolle2025,
+  type = {Dataset},
+  title = {The Digitised and Annotated {{Holle List}} of the {{Barrier Islands}} Languages, off the West Coast of {{Sumatra}}, {{Indonesia}}},
+  author = {Rajeg, Gede Primahadi Wijaya and Arka, I Wayan},
+  date = {2025},
+  origdate = {2024},
+  publisher = {Open Science Framework (OSF)},
+  doi = {10.17605/OSF.IO/P8A3R},
+  url = {https://github.com/complexico/holle-list-barrier-islands},
+  keywords = {Barrier Islands Languages,Digital Humanities,Holle-list}
+}
+
+@dataset{rajeggroupwork,
+  type = {Dataset},
+  title = {Group {{Work}} in the {{Lexicography Class}} for the {{Holle List}} of the {{Barrier Islands Languages}} of {{Indonesia}}},
+  author = {Rajeg, Gede Primahadi Wijaya and Arka, I Wayan},
+  date = {2025-02},
+  location = {GitHub},
+  doi = {10.17605/OSF.IO/7TQG6},
+  url = {https://github.com/complexico/lexico-holle-list-barrier-islands},
+  version = {0.0.1}
+}
+
+@book{1885-144589,
+	title = {Holle lists: Vocabularies in languages of Indonesia, Vol. 10/3: Islands off the west coast of Sumatra},
+	author = {Stokhof, W. A. L. and Almanar, Alma E.},
+	year = {1987},
+	date = {1987},
+	publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
+	series = {Pacific Linguistics (Series D)},
+	volume = {Materials in Languages of Indonesia},
+	number = {76},
+	url = {http://hdl.handle.net/1885/144589},
+	note = {Citation Key: 1885-144589},
+	address = {Canberra, A.C.T., Australia}
+}
+
+@book{llanes-ortiz2023,
+	title = {Digital initiatives for indigenous languages},
+	author = {Llanes-Ortiz, Genner},
+	year = {2023},
+	date = {2023},
+	publisher = {United Nations Educational, Scientific and Cultural Organization (UNESCO) & STICHTING GLOBAL VOICES},
+	url = {https://unesdoc.unesco.org/ark:/48223/pf0000387186},
+	address = {Paris, France ; Amsterdam, The Netherlands}
+}
+
+@book{stokhofHolleListsVocabularies1986,
+  title = {Holle Lists, Vocabularies in Languages of {{Indonesia}}, {{Vol}}. 8: {{Kalimantan}} ({{Borneo}})},
+  shorttitle = {Holle {{Lists}}},
+  editor = {Stokhof, W. A. L. and Almanar, Alma E.},
+  date = {1986},
+  series = {Materials in {{Languages}} of {{Indonesia}}},
+  number = {31},
+  publisher = {Dept. of Linguistics, Research School of Pacific Studies, The Australian National University},
+  location = {Canberra, A.C.T., Australia},
+  doi = {10.15144/PL-D69},
+  url = {http://hdl.handle.net/1885/144584},
+  urldate = {2025-10-13},
+  isbn = {978-0-85883-336-4},
+  langid = {english}
+}
+
